# cilly-vm-cpp

./: .bazelrc  .clang-format  .clang-format-ignore  .gitignore  LICENSE  MODULE.bazel  README.md  README_FORMAT.md
cilly_vm_cpp/: cilly_vm_cpp.sln  cilly_vm_cpp.vcxproj  cilly_vm_cpp.vcxproj.filters  file.txt
docs/: BACKEND_LINE_MAP.md  INTERVIEW_REVIEW.md  blog_gc_architecture.md
scripts/: format.ps1  format_changed.ps1  format_check.ps1  format_check_changed.ps1
src/: BUILD.bazel  GC.md  PROJECT_STATE.md  builtins.cc  builtins.h  bytecode_stream.h  call_frame.h  chunk.cc  chunk.h  debug_log.h  function.cc  function.h  main.cc  object.cc  object.h  opcodes.h  stack_stats.cc  stack_stats.h  value.cc  value.h  vm.cc  vm.h
src/frontend/: BUILD.bazel  ast.h  generator.cc  generator.h  lexer.cc  lexer.h  parser.cc  parser.h
src/gc/: BUILD.bazel  gc.cc  gc.h  gc_object.h
src/util/: io.cc  io.h
tests/: BUILD.bazel  GTEST须知（自用）.md  README_GTEST.md  chunk_function_test.cc  frontend_e2e_test.cc  gc_bytes_budget_growth_smoke_test.cc  gc_bytes_budget_large_object_smoke_test.cc  gc_collect_with_roots_smoke_test.cc  gc_instance_fields_is_gc_object_smoke_test.cc  gc_native_argv_pinning_smoke_test.cc  gc_parallel_test.cc  gc_root_guard_smoke_test.cc  gc_smoke_test.cc  gc_stress_smoke_test.cc  gc_trace_roots_active_frames_only_smoke_test.cc  gc_vm_auto_collect_smoke_test.cc  gc_vm_default_threshold_no_collect_smoke_test.cc  gc_vm_roots_smoke_test.cc  global_variable_test.cc  hello_test.cc  legacy_vm_opcode_migration_test.cc  milestone_smoke_test.cc  no_debug_output_smoke_test.cc  oo_bound_method_smoke_test.cc  oo_callv_class_smoke_test.cc  oo_class_decl_smoke_test.cc  oo_ctor_no_init_args_fail_test.cc  oo_inherit_basic_smoke_test.cc  oo_inherit_init0_smoke_test.cc  oo_inherit_init1_smoke_test.cc  oo_inherit_init_arity_fail_test.cc  oo_inherit_override_smoke_test.cc  oo_init0_smoke_test.cc  oo_init1_smoke_test.cc  oo_method_basic_smoke_test.cc  oo_prop_dict_smoke_test.cc  oo_prop_instance_smoke_test.cc  oo_super_basic_smoke_test.cc  oo_super_init_chain_smoke_test.cc  oo_super_multilevel_smoke_test.cc  (+12 more)
