cc_library(
    name = "cilly_core",
    srcs = glob(["*.cc"], exclude=["main.cc"]),
    hdrs = glob(["*.h"]),
    includes = ["."],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "cilly",
    srcs = ["main.cc"],
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
    ],
)

cc_library(
    name = "gc",
    srcs = ["gc/gc.cc"],
    hdrs = [
        "gc/gc.h",
        "gc/gc_object.h",
    ],
    includes = ["."],
    visibility = ["//visibility:public"],
)
