
cc_test(
    name = "milestone_smoke_test",
    srcs = ["milestone_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)



test_suite(
    name = "all",
    tests = [
        ":milestone_smoke_test",
    ],
)