
cc_library(
    name = "run_script",
    srcs = ["run_script.cc"],
    hdrs = ["run_script.h"],
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
    ],
)


cc_test(
    name = "milestone_smoke_test",
    srcs = ["milestone_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "vm_opcode_smoke_test",
    srcs = ["vm_opcode_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "frontend_e2e_test",
    srcs = ["frontend_e2e_test.cc"],
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "value_test",
    srcs = ["value_test.cc"],
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "stack_stats_test",
    srcs = ["stack_stats_test.cc"],
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "chunk_function_test",
    srcs = ["chunk_function_test.cc"],
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "script_bridge_smoke_test",
    srcs = ["script_bridge_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "oo_prop_dict_smoke_test",
    srcs = ["oo_prop_dict_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "oo_prop_instance_smoke_test",
    srcs = ["oo_prop_instance_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)


cc_test(
    name = "oo_callv_class_smoke_test",
    srcs = ["oo_callv_class_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "oo_class_decl_smoke_test",
    srcs = ["oo_class_decl_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "//tests:run_script",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)



cc_test(
    name = "oo_method_basic_smoke_test",
    srcs = ["oo_method_basic_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "oo_bound_method_smoke_test",
    srcs = ["oo_bound_method_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        ":run_script",
    ],
)

cc_test(
    name = "oo_this_smoke_test",
    srcs = ["oo_this_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        ":run_script",
    ],
)

cc_test(
    name = "oo_this_bound_method_smoke_test",
    srcs = ["oo_this_bound_method_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        ":run_script",
    ],
)

cc_test(
    name = "oo_init0_smoke_test",
    srcs = ["oo_init0_smoke_test.cc"],
    size = "small",
    timeout = "short",
    deps = [
        "//src:cilly_core",
        "//src/frontend:frontend",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
        ":run_script",
    ],
)


test_suite(
    name = "all",
    tests = [
        ":chunk_function_test",
        ":stack_stats_test",
        ":value_test",
        ":vm_opcode_smoke_test",
        ":milestone_smoke_test",
        ":script_bridge_smoke_test",
        ":oo_prop_dict_smoke_test",
        ":oo_prop_instance_smoke_test",
        ":oo_callv_class_smoke_test",
        ":oo_method_basic_smoke_test",
        ":oo_bound_method_smoke_test",
        ":oo_this_smoke_test",
        ":oo_this_bound_method_smoke_test",
        ":oo_init0_smoke_test",
    ],
)